Update height of home section

--- a/main/templates/basics/home.html
+++ b/main/templates/basics/home.html
@@ -84,7 +84,7 @@
 <hr class="my-0" style="border: none; border-top: 2px solid #333;" />
 
 <!-- How It Works Section -->
-<section class="d-flex align-items-center text-white" style="background-color: #1f1f1f;">
+<section class="d-flex align-items-center text-white" style="background-color: #1f1f1f; height:100vh">
   <div class="container py-5">
     <h2 class="text-center fw-bold mb-5 text-warning">How It Works</h2>
     <div class="row g-4">
