--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -144,6 +144,17 @@
         margin-bottom: 12px;
       }
     </style>
+
+    <!-- Google analytics tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4HJFCK3Y4N"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-4HJFCK3Y4N');
+    </script>
+
   </head>
   <body>
     <!-- Navbar -->
